packages/web-qwik/src/components/blog/blog-main.module.scss
.blog-main {
  box-sizing: border-box;
  padding: 1rem;
  margin: 1rem 0;
  box-shadow: 0 0 0.125rem rgba(black, 0.2);
  border-radius: 0.25rem;
  width: 100%;
  max-width: 800px;

  background-color: rgba(255, 255, 255, 0.3);

  [data-theme="dark"] & {
    background-color: rgba(0, 0, 0, 0.2);
  }

  @media (width < 580px) {
    padding: 0.5rem;
    margin: 0.25rem;
    width: calc(100% - 0.5rem);
  }
}

